fixed bug : menu not showing

--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -44,10 +44,6 @@ nav{
         display: flex;
         flex-direction: row;
     
-        .search-bar{
-        height: 20px;
-        margin-right: 50px;
-    }
         i{
             color: white;
             font-size: 25px;
